--- a/Python/1 Python Basics/1.1 Hello World.md
+++ b/Python/1 Python Basics/1.1 Hello World.md
@@ -1,18 +1,39 @@
-### 1.1. **Hello World**
+*[Back to index](..\readme.md)*
 
-*Let’s try your first program in Python. A statement or expression is an instruction
-the computer will run or execute. Perhaps the simplest program you can write
-is a print statement. When you run the print statement, Python will
-simply display the value in the parentheses. The value in the parentheses is called the
-argument. If you are using a Jupiter notebook in this
-course, you will see a small rectangle with the statement.
-This is called a cell. If you select this cell with your mouse, then
-click the run cell button. The statement will execute. The result will be displayed beneath
-the cell. We will follow this paradigm in the videos.
-It’s customary to comment your code. This tells other people what your code does. You
-simply put a hash symbol proceeding your comment. When you run the code, Python will ignore
-the comment. A Syntactic error is when Python does not
-understand your code. For example, if you spell print "frint", you will get an error
-message. A Semantic error is when your logic is wrong.
-For example, if you enter Python 102 instead of Python 101, you don't get an error message,
-but your code is wrong*
+### Hello World
+*Typically the first program that will be created*  
+
+A statement or expression is an instruction the computer will run or execute. Perhaps the simplest program that can be written is a print statement. When a print statement is run, Python will display the argument (the value in the parentheses). Note it is good practice to comment code.
+
+```python
+# Ye Olde Hello World
+print ("Hello World")
+```
+Will output `Hello World`  
+[Code](<1.0 Hello World.py>)
+
+### Print Formatting
+Printing on multiple lines:
+
+```python
+# Ye Olde Hello World
+print ("Hello\nWorld")
+```
+Will output  
+```
+Hello 
+World
+```
+
+### F-strings and printing variables
+Variables can be included in print statements as follows:
+```python
+# Define variable
+num = 3
+
+# Print with a variable
+print ("Hello World", num)
+```
+Will output `Hello World 3`
+
+This can be done more elegantly with f-strings:
