--- a/Python/3 Python Programming Fundamentals (Flow Control)/3.5 Exception Handling.md
+++ b/Python/3 Python Programming Fundamentals (Flow Control)/3.5 Exception Handling.md
@@ -1,15 +1,6 @@
-<p style="text-align:center">
-    <a href="https://skills.network" target="_blank">
-    <img src="https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/assets/logos/SN_web_lightmode.png" width="200" alt="Skills Network Logo">
-    </a>
-</p>
-
+*[Back to index](..\readme.md)*
 
 # **Exception Handling**
-
-Estimated time needed: **15** minutes
-    
-
 ## Objectives
 
 After completing this lab you will be able to:
