--- a/Python/1 Python Basics/1.1 Hello World.md
+++ b/Python/1 Python Basics/1.1 Hello World.md
@@ -10,7 +10,7 @@ A statement or expression is an instruction the computer will run or execute. Pe
 print ("Hello World")
 ```
 Will output `Hello World`  
-[Code](<1.0 Hello World.py>)
+[Code](<..\Code Snips\1.0 Hello World.py>)
 
 ### Print Formatting
 Printing on multiple lines:
@@ -36,4 +36,18 @@ print ("Hello World", num)
 ```
 Will output `Hello World 3`
 
-This can be done more elegantly with f-strings:
+See [Types](<1.2 Types.md>) for more information about variables and strings. 
+
+This can be done more elegantly with f-strings which caninterpolate variables, objects, and expressions directly into strings. It also allows better control over spacing.
+
+By prefixing a string with f or F, expressions can be embedded within curly braces ({}), which are evaluated at runtime.
+
+```python
+# Variables
+name = "Bob"
+age = 30
+
+# Print with f-strings
+print(f"Hello, my name is {name} and I'm {age} years old.")
+```
+Output will be: `Hello, my name is Bob and I'm 30 years old.`
