Update 1.1 Hello World.md

--- a/Python/1 Python Basics/1.1 Hello World.md
+++ b/Python/1 Python Basics/1.1 Hello World.md
@@ -1,4 +1,4 @@
-*[Back to index](..\readme.md)*
+*[Back to index](<..\readme.md>)*
 
 ### Hello World
 *Typically the first program that will be created*  
