--- a/Python/1 Python Basics/1.2 Types.md
+++ b/Python/1 Python Basics/1.2 Types.md
@@ -1,35 +1,55 @@
 ### 1.2 **Types**
 
-*A type is how Python represents different types of data. In this video, we will discuss
-some widely used types in Python. You can have different types in Python.
-They can be integers like 11, real numbers like 21.213. They can even be words.
-Integers, real numbers and words can be expressed as different data types.
-The following chart summarizes three data types for the last examples.
-The first column indicates the expression. The second column indicates the data type.
-We can see the actual data type in Python by using the type command.
-We can have int, which stands for an integer, and float that stands for float, essentially
-a real number. The type string is a sequence of characters.
-Here are some integers; integers can be negative or positive.
-It should be noted that there is a finite range of integers, but it is quite large.
-Floats are real numbers; they include the integers but also numbers in between the integers.
-Consider the numbers between 0 and 1. We can select numbers in between them; these numbers
-are floats. Similarly, consider the numbers between 0.5
-and 0.6. We can select numbers in-between them; these are floats as well.
-We can continue the process, zooming in for different numbers. Of course, there is a limit,
-but it is quite small. You can change the type of the expression
-in Python; this is called type casting. You can convert an int to a float.
-For example, you can convert or cast the integer 2 to a float 2.
-Nothing really changes. If you cast a float to an integer, you must
-be careful. For example, if you cast the float 1.1 to
-1, you will lose some information. If a string contains an integer value, you
-can convert it to int. If we convert a string that contains a non-integer
-value, we get an error. Check out more examples in the lab.
-You can convert an int to a string or a float to a string.
-Boolean is another important type in Python. A Boolean can take on two values.
-The first value is true, just remember we use an uppercase T.
-Boolean values can also be false, with an uppercase F.
-Using the type command on a Boolean value, we obtain the term bool, this is short for
-Boolean. If we cast a Boolean true to an integer or
+*A type is how Python represents different types of data.*
+
+Some of the most common data types are integers (`int`), strings (`str`) floats (`float`) and boolean (`bool`). The data type in Python can be determined using the type command. For example:
+```python
+type(38)
+type(1.6)
+type("Catepillar")
+type(True)
+```
+
+Will render:
+```
+class 'int'
+class 'float'
+class 'str'
+class 'bool'
+```
+
+* Integers: The set of real numbers with no decimal or fraction; -1, 2, 1000 etc
+* Floats: Numbers that contain a decimal; 1.5, 3.14, 166.456 etc
+* Strings: A Sequence of characters that can include letters, numbers or symbols; "This is a sring, 33 !"
+* Boolean: A data type that can only have one of two possible values, most commonly True/False (Note: case is important)
+
+There are some limitations when it comes to machines representing real numbers, but floating point numbers are a good representation in most cases. The specifics of floats for a given runtime environment can be checked using `sys.float_info`. This will also show the largest and smallest number that can be represented with them.
+
+### Type Casting
+Expression types can be changed in python, this is called type casting. the integer 2 can be cast to a float as follows:
+```python
+float(2)
+```
+Which will render:
+```
+2.0
+```
+Note that when casting a float to an integer, information can be lost; for example casting 1.1 to an integer will result in 1.
+
+If a string contains an integer value, it can be converted to a float or int; however this is only possible if the string contains only numerical characters; for example
+```python
+int('1')
+float('1.2')
+```
+Will render:
+```
+1
+1.2
+```
+
+While `int(1 and some text)` would result in an error.
+
+Boolean can be cast o an integer or float; If a Boolean True is cast to an integer or float it will result in `1` or `1.0`. Simialarly to an integer or
 float, we will get a 1. If we cast a Boolean false to an integer or
 float, we get a zero. If you cast a 1 to a Boolean, you get a true.
 Similarly, if you cast a 0 to a Boolean, you get a false.
