--- a/Python/1 Python Basics/1.1 Hello World.md
+++ b/Python/1 Python Basics/1.1 Hello World.md
@@ -3,14 +3,23 @@
 ### Hello World
 *Typically the first program that will be created*  
 
-A statement or expression is an instruction the computer will run or execute. Perhaps the simplest program that can be written is a print statement. When a print statement is run, Python will display the argument (the value in the parentheses). Note it is good practice to comment code.
-
+A statement or expression is an instruction the computer will run or execute. Perhaps the simplest program that can be written is a print statement. When a print statement is run, Python will display the argument (the value in the parentheses). 
 ```python
 # Ye Olde Hello World
 print ("Hello World")
 ```
 Will output `Hello World`  
-[Code](<..\Code Snips\1.0 Hello World.py>)
+[Code](<..\Code Snips\1.1.1 Hello World.py>)
+
+Note it is good practice to comment code:
+```python
+
+# This is a single-line comment
+"""
+This is a 
+multi-line comment
+"""
+```
 
 ### Print Formatting
 Printing on multiple lines:
@@ -34,9 +43,10 @@ num = 3
 # Print with a variable
 print ("Hello World", num)
 ```
-Will output `Hello World 3`
+Will output:  
+`Hello World 3`
 
-See [Types](<1.2 Types.md>) for more information about variables and strings. 
+*(See [Types](<1.2 Types.md>) for more information about variables and strings. )*
 
 This can be done more elegantly with f-strings which caninterpolate variables, objects, and expressions directly into strings. It also allows better control over spacing.
 
@@ -50,4 +60,5 @@ age = 30
 # Print with f-strings
 print(f"Hello, my name is {name} and I'm {age} years old.")
 ```
-Output will be: `Hello, my name is Bob and I'm 30 years old.`
+Output will be:  
+`Hello, my name is Bob and I'm 30 years old.`
