--- a/Python/1 Python Basics/1.3 Expressions and Variables.md
+++ b/Python/1 Python Basics/1.3 Expressions and Variables.md
@@ -1,6 +1,29 @@
 1.3 **Expressions and Variables**
 
-*In this video we’ll cover expressions and variables.
+
+4. Input from User:
+```python
+
+# Example of taking input from the user
+user_input = input("Enter your name: ")
+print("Hello, " + user_input + "!")
+```
+
+```python
+## Declare Variables of different types 
+
+age = 38
+height = 1.6
+name = "Amanda"
+
+print ("Name: ", name, type(name))
+print ("Height: ", height, type(height))
+print ("Age: ", age, type(age))
+```
+
+
+
+*In this video weï¿½ll cover expressions and variables.
 Expressions describe a type of operation that computers perform.
 Expressions are operations that Python performs. For example, basic arithmetic operations like
 adding multiple numbers. The result, in this case, is 160.
@@ -8,7 +31,7 @@ We call the numbers operands and the maths symbols, in this case addition, are c
 operators. We can perform operations such as subtraction
 using the subtraction sign. In this case, the result is a negative number.
 We can perform multiplication operations using the asterisk. The result is 25.
-In this case the operands are given by – and *.
+In this case the operands are given by ï¿½ and *.
 We can also perform division with the forward slash.
 25 divided by 5 is 5. 25 divided by 6 is approximately 4.167.
 In Python 3, the version we will be using in this course, both will result in a float.
@@ -20,7 +43,7 @@ In both cases, Python performs multiplication, then addition to obtain the final
 There are a lot more operations you can do with Python. Check the labs for more examples.
 We will also be covering more complex operations throughout the course.
 The expressions in the parentheses are performed first. We then multiply the result by 60,
-the result is 1920. Now let’s look at variables.
+the result is 1920. Now letï¿½s look at variables.
 We can use variables to store values, in this case, we assign a value of 1 to the variable
 my_variable using the assignment operator i.e., the equals sign.
 We can then use the value somewhere else in the code by typing the exact name of the variable.
@@ -35,9 +58,9 @@ We can also perform operations on x and assign the value x.
 The variable x now has a value 2.666. As before, the old value of x is not important.
 We can use the type command in variables as well.
 It's good practice to use meaningful variable names, so you don't have to keep track of
-what the variable is doing. Let’s say we would like to convert the number
+what the variable is doing. Letï¿½s say we would like to convert the number
 of minutes in the highlighted examples to number of hours in the following music dataset.
-We call the variable that contains the total number of minutes, total_min. It’s common
+We call the variable that contains the total number of minutes, total_min. Itï¿½s common
 to use the underscore to represent the start of a new word, you can also use a capital
 letter. We call the variable that contains the total
 number of hours total_hr. We can obtain the total number of hours by
@@ -45,3 +68,76 @@ dividing total_min by 60. The result is approximately 2.367 hours.
 If we modify the value of the first variable, the value of the variable will change.
 The final result values change accordingly, but we do not have to modify the rest of the
 code.*
+
+*ChatGPT:*  
+Now, let's move on to the next task.  
+Task 3: Basic Operations:  
+Create a script that performs basic operations on numbers. Declare two variables (e.g., num1 and num2), and then perform addition, subtraction, multiplication, and division. Print the results.
+```python
+# Example
+num1 = 10
+num2 = 5
+
+# Perform operations
+sum_result = num1 + num2
+difference_result = num1 - num2
+product_result = num1 * num2
+division_result = num1 / num2
+
+# Print results
+print("Sum:", sum_result)
+print("Difference:", difference_result)
+print("Product:", product_result)
+print("Division:", division_result)
+```
+Give it a try, and let me know when you're ready to move forward!
+
+___
+
+*Me:*  
+Will do, where possible could you not show me the code solution until i have attempted it myself?  
+
+*ChatGPT:*  
+Absolutely, I'll refrain from providing the solution until you've had a chance to attempt the task. Take your time, and whenever you're ready, share your solution, and we can discuss it!
+___
+*Me:*  
+Getting Fancy now:
+```python
+## Numerical operations
+
+#Define Numbers
+num1 = 5
+num2 = 3
+
+## Perform Opertaions
+sum_result = num1 + num2
+subtract_result = num1 - num2
+product_result = num1 * num2
+division_result = num1 / num2
+
+#Print results
+print ("The numbers are: ", num1, " and ",num2)
+print ("Sum is: ", sum_result)
+print ("Difference is: ", subtract_result)
+print ("Product is: ", product_result)
+print ("Division is: ", division_result)## Numerical operations
+```
+
+*ChatGPT:*  
+Excellent job! You've successfully created a Python script that performs basic numerical operations. Here's some feedback:
+
+    Variable Naming:
+        You appropriately named your variables (num1, num2, sum_result, etc.), which makes your code easy to understand.
+
+    Performing Operations:
+        You correctly used operators for addition, subtraction, multiplication, and division to perform operations.
+
+    Print Statements:
+        Your print statements effectively display the numbers and the results of the operations.
+
+    Code Repetition:
+        In Python, you don't need to declare the variables twice. You can reuse the same variables throughout your script.
+
+___
+
+*Note Point 4, I coudl have done the operations in the print statement.
