--- a/Python/3 Python Programming Fundamentals (Flow Control)/3.1 Conditions and Branching.md
+++ b/Python/3 Python Programming Fundamentals (Flow Control)/3.1 Conditions and Branching.md
@@ -1,29 +1,42 @@
 ### 3.1 **Conditions and Branching**
 
+Control Flow (if statements):
+```python
+
+# Example of if statement
+age = 18
+if age >= 18:
+    print("You are an adult.")
+else:
+    print("You are a minor.")
+```
+
+
+
 *In this video you will learn about Conditions and Branching.
 Comparison operations compare some value or operand, then, based on some condition they
 produce a Boolean.
-Let's say we assign "a" value of “a” to 6.
+Let's say we assign "a" value of ï¿½aï¿½ to 6.
 We can use the equality operator denoted with two equal signs to determine if two values
 are equal, in this case, if seven is equal to 6.
 In this case, as six is not equal to 7, the result is false.
 If we performed an equality test for the value 6, the two values would be equal.
 As a result, we would get a true.
 Consider the following equality comparison operator.
-If the value of the left operand, in this case, the variable “i” is greater than
+If the value of the left operand, in this case, the variable ï¿½iï¿½ is greater than
 the value of the right operand, in this case, 5, the condition becomes true, or else we
 get a false.
 Let's display some values for "i" on the left.
-Let’s see the values greater than 5 in green and the rest in red.
+Letï¿½s see the values greater than 5 in green and the rest in red.
 If we set "i" equal to 6, we see that 6 is larger than 5, and as a result, we get a true.
 We can also apply the same operations to floats.
-If we modify the operator as follows, if the left operand “i” is greater than or equal
+If we modify the operator as follows, if the left operand ï¿½iï¿½ is greater than or equal
 to the value of the right operand, in this case, 5, then the condition becomes true.
 In this case, we include the value of 5 in the number line and the color changes to green
 accordingly.
 If we set the value of "i" equal to 5, the operand will produce a true.
-If we set the value of “i” to 2, we would get a false because 2 is less than 5.
-We can change the inequality, if the value of the left operand, in this case, “i”
+If we set the value of ï¿½iï¿½ to 2, we would get a false because 2 is less than 5.
+We can change the inequality, if the value of the left operand, in this case, ï¿½iï¿½
 is less than the value of right operand, in this case, 6, then condition becomes true.
 Again, we can represent this with a colored number line.
 The areas where the inequality is true are marked in green and red where the inequality
@@ -34,14 +47,14 @@ are not equal, then the condition becomes true.
 We can use a number line.
 When the condition is true the corresponding numbers are marked in green and red for where
 the condition is false.
-If we set “I” equal to 2, the operator is true as 2 is not equal to 6.
+If we set ï¿½Iï¿½ equal to 2, the operator is true as 2 is not equal to 6.
 We compare strings as well.
-Comparing “AC/DC” and “Michael Jackson” using the equality test, we get a false, as
+Comparing ï¿½AC/DCï¿½ and ï¿½Michael Jacksonï¿½ using the equality test, we get a false, as
 the strings are not the same.
 Using the inequality test, we get a true, as the strings are different.
 See the labs for more examples.
 Branching allows us to run different statements for a different input.
-It's helpful to think of an “if statement” as a locked room:
+It's helpful to think of an ï¿½if statementï¿½ as a locked room:
 If the statement is true, you can enter the room, and your program can run some predefined
 task.
 If the statement is false, your program will skip the task.
@@ -62,14 +75,14 @@ false.
 For the case where the age is 17, we set the value of the variable age to 17.
 We check the if statement; the statement is false, therefore the program will not execute
 the statement to print "you will enter."
-In this case, it will just print “move on.”
+In this case, it will just print ï¿½move on.ï¿½
 For the case where the age is 19, we set the value of the variable age to 19.
 We check the if statement.
-The statement is true, therefore, the program will execute the statement to print “you
-will enter.”
-Then it will just print “move on.”
-The “else statement” will run a different block of code, if the same condition is false.
-Let’s use the ACDC concert analogy again; if the user is 17, they cannot go to the ACDC
+The statement is true, therefore, the program will execute the statement to print ï¿½you
+will enter.ï¿½
+Then it will just print ï¿½move on.ï¿½
+The ï¿½else statementï¿½ will run a different block of code, if the same condition is false.
+Letï¿½s use the ACDC concert analogy again; if the user is 17, they cannot go to the ACDC
 concert, but they can go to the Meat Loaf concert represented by the purple square.
 If the individual is 19, the condition is true.
 They can enter the ACDC concert, then they can move on as before.
@@ -84,11 +97,11 @@ This corresponds to the individual attending the Meat Loaf concert.
 The program will then continue running.
 For the case where the age is 19, we set the value of the variable age to 19.
 We check the if statement.
-The statement is true, therefore, the program will execute the statement to print “you
-will enter.”
+The statement is true, therefore, the program will execute the statement to print ï¿½you
+will enter.ï¿½
 The program skips the expressions in the else statement and continues to run the rest of
 the expressions.
-The elif statement, short for “else if,” allows us to check additional conditions,
+The elif statement, short for ï¿½else if,ï¿½ allows us to check additional conditions,
 if the proceeding condition is false.
 If the condition is true, the alternate expressions will be run.
 Consider the concert example, if the individual is 18, they will go to the Pink Floyd concert,
@@ -96,7 +109,7 @@ instead of attending the ACDC or Meat Loaf concert.
 The person of 18 years of age enters the area as they are not over 19 years of age.
 They cannot see ACDC, but as they are 18 years, they attend Pink Floyd.
 After seeing Pink Floyd, they move on.
-The syntax of the “elseif statement” is similar.
+The syntax of the ï¿½elseif statementï¿½ is similar.
 We simply add the statement elseif with the condition.
 We then add the expression we would like to execute if the statement is true, with an
 indent.
@@ -104,24 +117,24 @@ Let's illustrate the code on the left.
 An 18-year-old enters.
 They are not older than 18 years of age, therefore the condition is false, so the condition of
 the else if statement is checked.
-The condition is true, so then we would print “go see Pink Floyd.“
+The condition is true, so then we would print ï¿½go see Pink Floyd.ï¿½
 Then we would move on, as before.
-If the variable age was 17, the statement “go see Meat Loaf” would print.
-Similarly, if the age was greater than 18, the statement “you can enter” would print.
+If the variable age was 17, the statement ï¿½go see Meat Loafï¿½ would print.
+Similarly, if the age was greater than 18, the statement ï¿½you can enterï¿½ would print.
 Check the labs for more examples.
-Now let’s take a look at logic operators.
+Now letï¿½s take a look at logic operators.
 Logic operations take Boolean values and produce different Boolean values.
 The first operation is the not operator.
 If the input is true, the result is a false.
 Similarly, if the input is false, the result is a true.
 Let A and B represent Boolean variables.
-The “or” operator takes in the two values, and produces a new Boolean value.
+The ï¿½orï¿½ operator takes in the two values, and produces a new Boolean value.
 We can use this table to represent the different values.
 The first column represents the possible values of A.
 The second column represents the possible values of B.
 The final column represents the result of applying the "or" operation.
 We see the "or" operator only produces a false if all the Boolean values are false.
-The following lines of code will print out: “This album was made in the 70's or 90's”
+The following lines of code will print out: ï¿½This album was made in the 70's or 90'sï¿½
 if the variable album year does not fall in the 80s.
 Let's see what happens when we set the album year to 1990.
 The colored number line is green when the condition is true and red when the condition
@@ -141,7 +154,7 @@ The first column represents the possible values of A.
 The second column represents the possible values of B.
 The final column represents the result of applying the "and" operation.
 We see the "or" operator only produces a true if all the Boolean values are true.
-The following lines of code will print out: “This album was made in the 80’s” if
+The following lines of code will print out: ï¿½This album was made in the 80ï¿½sï¿½ if
 the variable album year is between 1980 and 1989.
 Let's see what happens when we set the album year to 1983.
 As before, we can use the colored number line to examine where the condition is true.
