--- a/Python/3 Python Programming Fundamentals (Flow Control)/3.3 Functions.md
+++ b/Python/3 Python Programming Fundamentals (Flow Control)/3.3 Functions.md
@@ -1,10 +1,20 @@
 ### 3.3 **Functions**
 
-*In this video we will cover functions. You will learn how to use some of Python’s built-in
+7. Functions:
+```python
+# Example of a function
+def greet(name):
+    print("Hello, " + name + "!")
+
+# Call the function
+greet("Alice")
+```
+
+*In this video we will cover functions. You will learn how to use some of Pythonï¿½s built-in
 functions as well as how to build your own functions.
 Functions take some input then produce some output or change.
 The function is just a piece of code you can reuse.
-You can implement your own function, but in many cases, you use other people’s functions.
+You can implement your own function, but in many cases, you use other peopleï¿½s functions.
 In this case, you just have to know how the function works and in some cases how to import
 the functions. Let the orange and yellow squares represent
 similar blocks of code. We can run the code using some input and get
@@ -19,7 +29,7 @@ This returns a value; you can use the value. For example, you can input this val
 new function f2. When we call this new function f2, the value
 is passed to another set of lines of code. The function returns a value.
 The process is repeated passing the values to the function you call.
-You can save these functions and reuse them, or use other people’s functions.
+You can save these functions and reuse them, or use other peopleï¿½s functions.
 Python has many built-in functions; you don't have to know how those functions work internally,
 but simply what task those functions perform. The function len takes in an input of type
 sequence, such as a string or list, or type collection, such as a dictionary or set, and
@@ -46,7 +56,7 @@ the process. In this case, the rectangle represents the
 list album ratings. When we apply the method sort to the list,
 the list album rating changes. Unlike the previous case, we see that the
 list album rating has changed. In this case, no new list is created.
-Now that we have gone over how to use functions in Python, let’s see how to build our own
+Now that we have gone over how to use functions in Python, letï¿½s see how to build our own
 functions. We will now get you started on building your
 own functions in python. This is an example of a function in python
 that returns its input value + 1. To define a function, we start with the keyword
@@ -69,7 +79,7 @@ If we call the function again, the process starts from scratch; we pass in an 8.
 The subsequent operations are performed. Everything that happened in the last call
 will happen again with a different value of "A"
 The function returns a value, in this case, 9.
-Again, this is just a helpful analogy. Let’s try and make this function more complex.
+Again, this is just a helpful analogy. Letï¿½s try and make this function more complex.
 It's customary to document the function on the first few lines; this tells anyone who
 uses the function what it does. This documentation is surrounded in triple
 quotes. You can use the help command on the function
@@ -79,21 +89,21 @@ rest of the examples. A function can have multiple parameters.
 The function mult multiplies two numbers; in other words, it finds their product.
 If we pass the integers 2 and 3, the result is a new integer.
 If we pass the integer 10 and the float 3.14, the result is a float 31.4.
-If we pass in the integer two and the string “Michael Jackson,” the string Michael
+If we pass in the integer two and the string ï¿½Michael Jackson,ï¿½ the string Michael
 Jackson is repeated two times. This is because the multiplication symbol
 can also mean repeat a sequence. If you accidentally multiply an integer and
-a String instead of two integers, you won’t get an error.
+a String instead of two integers, you wonï¿½t get an error.
 Instead, you will get a String, and your program will progress, potentially failing later because
 you have a String where you expected an integer. This property will make coding simpler, but
 you must test your code more thoroughly. In many cases a function does not have a return
 statement. In these cases, Python will return the special
-“None” object. Practically speaking, if your function has
+ï¿½Noneï¿½ object. Practically speaking, if your function has
 no return statement, you can treat it as if the function returns nothing at all.
-The function MJ simply prints the name 'Michael Jackson’.
-We call the function. The function prints “Michael Jackson.”
-Let's define the function “No work” that performs no task.
-Python doesn’t allow a function to have an empty body, so we can use the keyword pass,
-which doesn’t do anything, but satisfies the requirement of a non-empty body.
+The function MJ simply prints the name 'Michael Jacksonï¿½.
+We call the function. The function prints ï¿½Michael Jackson.ï¿½
+Let's define the function ï¿½No workï¿½ that performs no task.
+Python doesnï¿½t allow a function to have an empty body, so we can use the keyword pass,
+which doesnï¿½t do anything, but satisfies the requirement of a non-empty body.
 If we call the function and print it out, the function returns a None.
 In the background, if the return statement is not called, Python will automatically return
 a None. It is helpful to view the function No Work
@@ -108,7 +118,7 @@ of a loop or tuple. We call the function with the list album ratings
 as an input. Let's display the list on the right with its
 corresponding index. Stuff is used as an input to the function
 enumerate. This operation will pass the index to i and
-the value in the list to “s”. The function would begin to iterate through
+the value in the list to ï¿½sï¿½. The function would begin to iterate through
 the loop. The function will print the first index and
 the first value in the list. We continue iterating through the loop.
 The values of i and s are updated. The print statement is reached.
@@ -149,16 +159,16 @@ of Date in the local scope, in this case, 1982.
 (click6) When we print in the global scope, we use the global variable value.
 The global value of the variable is 2017. Therefore, the value is set to 2017.
 If a variable is not defined within a function, Python will check the global scope.
-Consider the function "AC-DC“. The function has the variable rating, with no value assigned.
+Consider the function "AC-DCï¿½. The function has the variable rating, with no value assigned.
 If we define the variable rating in the global scope, then call the function, Python will
 see there is no value for the variable Rating. As a result, python will leave the scope and
 check if the variable Ratings exists in the global scope. It will use this value of Ratings
-in the global scope within the scope of "AC-DC“. In the function, will print out a 9.
+in the global scope within the scope of "AC-DCï¿½. In the function, will print out a 9.
 The value of z in the global scope will be 10, as we added one.
 The value of rating will be unchanged within the global scope.
 Consider the function Pink Floyd. If we define the variable Claimed Sales with
 the keyword global, the variable will be a global variable.
 We call the function Pink Floyd. The variable claimed sales is set to the string
-“45 million” in the global scope. When we print the variable, we get a value
-of “45 million.” There is a lot more you can do with functions.
+ï¿½45 millionï¿½ in the global scope. When we print the variable, we get a value
+of ï¿½45 million.ï¿½ There is a lot more you can do with functions.
 Check out the lab for more examples.*
