--- a/Python/1 Python Basics/1.2 Types.md
+++ b/Python/1 Python Basics/1.2 Types.md
@@ -1,4 +1,6 @@
-### 1.2 **Types**
+*[Back to index](<..\readme.md>)*
+
+**Types**
 
 *A type is how Python represents different types of data.*
 
@@ -54,3 +56,11 @@ float, we will get a 1. If we cast a Boolean false to an integer or
 float, we get a zero. If you cast a 1 to a Boolean, you get a true.
 Similarly, if you cast a 0 to a Boolean, you get a false.
 Check the labs for more examples or check Python.org for other kinds of types in Python.*
+
+### Advanced Type Casting
+There are more advanced ways to do type-casting, for example, taking an [input](/ "Needs doing") (which is aways a string), and casting it to an integer; however the input type must be explained and [error handling](/ "Needs doing") is a very good idea.  
+For example:
+```py
+age = int(input("Enter your age: "))
+```
+*See Python argument in [Control Flow](/ "Needs doing")*
