Broke Some GPT chat into sections. Need to fix formatting on the pascals traingle bit

--- a/Python/1 Python Basics/1.3 Expressions and Variables.md
+++ b/Python/1 Python Basics/1.3 Expressions and Variables.md
@@ -140,3 +140,212 @@ Excellent job! You've successfully created a Python script that performs basic n
 ___
 
 *Note Point 4, I coudl have done the operations in the print statement.
+
+*Me:*  
+I have mostly solved it, I am getting an error though; `TypeError: '<=' not supported between instances of 'str' and 'int'` can you explain what this means?  
+
+*ChatGPT:*  
+Certainly! The error you're encountering, TypeError: '<=' not supported between instances of 'str' and 'int', suggests that you're trying to use the less than or equal to (<=) operator between a string and an integer.
+
+*In Python, when you receive input using the input() function, it is treated as a string by default.* If you're comparing the input to numerical values, you need to convert the input to an integer using the int() function.
+
+Here's a brief explanation and a potential solution:  
+Let's say you have code like this:
+```python
+
+age = input("Enter your age: ")
+
+# Check age range
+if age < 18:
+    print("You are a minor.")
+elif 18 <= age <= 65:
+    print("You are an adult.")
+else:
+    print("You are a senior citizen.")
+```
+In this case, age is a string, and when you try to compare it with integers using <=, Python raises the mentioned error.
+
+To fix this, convert age to an integer:
+```python
+
+age = int(input("Enter your age: "))
+
+# Check age range
+if age < 18:
+    print("You are a minor.")
+elif 18 <= age <= 65:
+    print("You are an adult.")
+else:
+    print("You are a senior citizen.")
+```
+
+This ensures that age is treated as an integer, allowing you to use numerical comparisons without encountering a TypeError.
+___
+
+*Me:*  
+oh yeah.... I did, but forgot to use that further on. 
+```python
+## User input and Conditionals
+
+# Request user's age
+age = input ("What is your age? ")
+
+# Convert age to integer
+int_age = int(age)
+
+# Use if Stetement to parse number and print a response
+if age <= 17:   
+    print ("No Booze for you!")
+    
+elif age <= 65:
+    print ("Drink up while you can!")
+
+else:
+    print ("You're over the hill - you can still drink though!")
+```
+
+is wrong, but 
+```python
+## User input and Conditionals
+
+# Request user's age
+age = input ("What is your age? ")
+
+# Convert age to integer
+int_age = int(age)
+
+# Use if Stetement to parse number and print a response
+if int_age <= 17:   
+    print ("No Booze for you!")
+    
+elif int_age <= 65:
+    print ("Drink up while you can!")
+
+else:
+    print ("You're over the hill - you can still drink though!")
+```
+works!
+
+*ChatGPT:*  
+Exactly! You nailed it! The error occurred because you initially used the input() function to get the age as a string, and then you correctly converted it to an integer with int(). The corrected version with int_age in the conditional statements is the right way to go.
+Feedback:
+
+    Variable Naming:
+        You correctly used int_age after converting the user input to an integer, making your code clearer.
+
+    Conditional Logic:
+        Your conditional statements are appropriately structured to handle different age ranges.
+
+    User Input:
+        You successfully used the input() function to get user input.
+
+**Task 6: Temperature Conversion**  
+Create a script that takes a temperature in Celsius as user input and converts it to Fahrenheit. The conversion formula is: `F=95×C+32`
+
+Ask the user to enter a temperature in Celsius, perform the conversion, and print the result.  
+___
+
+*Me:*  
+Please give me some feedback on this solution to task 6:
+```python
+## Conversion from Celcius to Farenheit
+degree_sign = u"\u00b0"
+# Request input
+temp = input ("What is the Celcius temperature that you would like to convert to farenheiht? ")
+
+# Convert input temp to float
+float_temp = float(temp)
+
+# Convert the temp into farenheight
+farenheit = (9/5) * float_temp + 32 
+
+# Print the tempertaure in farenheight
+print (temp, degree_sign, "C Is " ,farenheit ,degree_sign,"F")
+```
+
+*ChatGPT:*  
+Your solution to Task 6 looks great! Here's some feedback:
+Feedback:
+
+    Variable Naming:
+        You used meaningful variable names like float_temp and farenheit, making your code easy to understand.
+
+    User Input:
+        You successfully used the input() function to get user input for the Celsius temperature.
+
+    Conversion Formula:
+        You correctly applied the conversion formula for Celsius to Fahrenheit.
+
+    Print Statement:
+        Your print statement effectively communicates the converted temperature.
+
+    Degree Sign:
+        You used the degree sign (°) to enhance the representation of temperature.
+
+Your script is well-structured and achieves the task.  
+
+**Task 7: String Manipulation**  
+Create a script that takes a user's name as input and prints a personalized greeting. For example, if the user enters "Alice," the script should print `"Hello, Alice! How are you today?"`
+
+*Me:*  
+I managed task 7, just fine:
+```py
+## String Manipulation
+
+# Request input
+name = input("Hi, What's your name? ")
+
+# Print a nice greeting
+print ("Hi",name,"it's nice to meet you, I hope you're having a nice day :)")
+```
+
+*ChatGPT:*  
+Excellent job on Task 7! Your solution is clear and straightforward. Here's some feedback:
+Feedback:
+
+    Variable Naming:
+        You used the variable name name, which accurately represents the user's input.
+
+    User Input:
+        You successfully used the input() function to get the user's name.
+
+    String Concatenation:
+        You effectively used string concatenation to create a personalized greeting.
+
+    Print Statement:
+        Your print statement is concise and friendly.
+
+### Modulo  
+
+*Me:*  
+Thank you for explaining, could you also explain the "%" operator in this line "elif number % 2 != 0:" and tell me why that is preferred to using the odd and even options?  
+
+*ChatGPT:*  
+Certainly! The % operator in Python is called the modulo operator. It returns the remainder of the division of the left operand by the right operand. In the context of checking for odd or even numbers, the modulo operator is used to check if a number is divisible by 2.
+
+Now, let's break down the line of code you asked about:
+```py
+elif number % 2 != 0:
+```
+`number % 2`: This calculates the remainder when number is divided by 2.
+!= 0: This checks if the remainder is not equal to 0.  
+In other words, this condition checks if number is not divisible evenly by 2, meaning it has a remainder when divided by 2. If there's a remainder, it's an odd number; if there's no remainder, it's an even number.
+
+This approach is preferred for a few reasons:
+    
+    Simplicity: It's a concise and clear way to check for odd or even numbers without introducing unnecessary variables.  
+    Readability: The use of % in this context is a common idiom in programming and is easily recognizable for those familiar with the language.  
+    Efficiency: It's generally more efficient than creating additional variables and performing equality checks.
+
+Here's a comparison with using odd and even options:
+```python
+
+# Using modulo operator
+elif number % 2 != 0:
+
+# Using odd and even options
+elif number == odd:
+# or
+elif number == even:
+```
+The modulo approach is simpler, more idiomatic, and directly conveys the intention of checking for odd or even numbers. It's a good practice to use it in such contexts in Python.
