--- a/Python/3 Python Programming Fundamentals (Flow Control)/3.1 Conditions and Branching.md
+++ b/Python/3 Python Programming Fundamentals (Flow Control)/3.1 Conditions and Branching.md
@@ -167,3 +167,128 @@ Similarly, this region corresponds to where both statements are true.
 We see that 1983 falls in the area.
 Therefore we execute the statement.
 Branching allows us to run different statements for different inputs.*
+
+*ChatGPT:*  
+###Control Flow:  
+*Understand if statements, loops (for and while), and basic error handling.*  
+
+**Task 4: User Input and Conditionals**  
+Create a script that takes user input for their age. Based on the age, print different messages. For example:  
+```
+If the age is less than 18, print "You are a minor."
+If the age is between 18 and 65 (inclusive), print "You are an adult."
+If the age is 65 or older, print "You are a senior citizen."
+```
+Remember to convert the user input to an integer using int().
+___
+
+
+**Task 8: Even or Odd**  
+Write a script that takes an integer as user input and prints whether the number is even or odd.  
+Remember to convert user input to the appropriate data type when necessary.
+___
+
+*Me:*  
+I'm having trouble with a syntax error in part 8, though, however I'm confident the logic is sound:
+```py
+## Even or odd
+
+# Request input (and check it's an integer)
+while True:
+    try:
+        number = int(input("Please enter a number: "))
+    except ValueError:
+        print("Please enter an integer: ")
+
+# Check if Zero
+if number == 0:
+    print("0 is neither odd nor even")
+# Check if odd
+    elif number == odd:
+        print(number, "is an odd number")
+# Check if even
+    else number == even:
+        print(number, "is an odd number")
+```
+
+*ChatGPT:*  
+You're close! The issue seems to be with the indentation and the structure of your if-elif-else block. Here's the corrected version:
+```python
+## Even or odd
+
+# Request input (and check it's an integer)
+while True:
+    try:
+        number = int(input("Please enter a number: "))
+        break  # Break out of the loop if input is successfully converted to an integer
+    except ValueError:
+        print("Please enter an integer.")
+
+# Check if Zero
+if number == 0:
+    print("0 is neither odd nor even")
+# Check if odd
+elif number % 2 != 0:
+    print(number, "is an odd number")
+# Check if even
+else:
+    print(number, "is an even number")
+```
+Here are the changes:
+
+    I added a break statement after successfully converting the input to an integer to exit the while loop.
+
+    Fixed the indentation for the elif and else blocks.
+
+    Changed number == odd to number % 2 != 0 to check if the number is odd.
+
+    Removed the unnecessary even and odd variables.
+___
+
+*Me:*  
+So indentation is not a good idea?
+
+*ChatGPT:*  
+Indentation is crucial in Python; it's not just a matter of style but a fundamental aspect of the language's syntax. In Python, indentation is used to define blocks of code and is a key part of the language's readability. Unlike other languages that use braces or keywords like begin and end to define code blocks, Python relies on indentation.
+
+Here's why indentation is important:
+
+    Readability: Proper indentation makes your code more readable and easier to understand. It visually represents the structure of your code.
+
+    Code Blocks: In Python, indentation defines code blocks. Statements at the same indentation level are part of the same block. This is in contrast to languages that use braces (e.g., {}) to denote blocks.
+
+    Enforces Consistency: Consistent indentation is enforced by the Python interpreter. If indentation is inconsistent, it will result in an IndentationError.
+
+In your code, the if, elif, and else blocks should be indented at the same level. Incorrect indentation can lead to syntax errors or unexpected behavior.
+
+For example, in your original code:
+```py
+
+# Incorrect indentation
+if number == 0:
+    print("0 is neither odd nor even")
+# Check if odd
+elif number == odd:
+    print(number, "is an odd number")
+# Check if even
+else number == even:
+    print(number, "is an odd number")
+```
+
+The elif and else blocks are not indented correctly, leading to a syntax error.  
+The corrected version indents them at the same level:
+```python
+
+# Correct indentation
+if number == 0:
+    print("0 is neither odd nor even")
+# Check if odd
+elif number % 2 != 0:
+    print(number, "is an odd number")
+# Check if even
+else:
+    print(number, "is an even number")
+```
+
+Correct indentation is crucial for writing correct and readable Python code.
+___
