--- a/Python/2 Python Data Structures/2.1 Lists and Tuples.md
+++ b/Python/2 Python Data Structures/2.1 Lists and Tuples.md
@@ -3,7 +3,7 @@
 *In this video, we will cover lists and tuples. These are called compound data types and are
 one of the key types of data structures in Python.
 Tuples Tuples are an ordered sequence.
-Here is a Tuple “Ratings.”
+Here is a Tuple ï¿½Ratings.ï¿½
 Tuples are expressed as comma-separated elements within parentheses.
 These are values inside the parentheses.
 In Python, there are different types: strings, integer, float.
@@ -25,14 +25,14 @@ For example, if we want the first three elements, we use the following command.
 The last index is 1 larger than the index you want.
 Similarly, if we want the last two elements, we use the following command.
 Notice how the last index is 1 larger than the length of the tuple.
-We can use the “len” command to obtain the length of a tuple.
+We can use the ï¿½lenï¿½ command to obtain the length of a tuple.
 As there are 5 elements, the result is five.
 Tuples are immutable, which means we can't change them.
 To see why this is important, let's see what happens when we set the variable Ratings 1
 to ratings.
-Let's use the image to provide a simplified explanation of what’s going on.
+Let's use the image to provide a simplified explanation of whatï¿½s going on.
 Each variable does not contain a tuple, but references the same immutable tuple object.
-See the ‘objects and classes’ module for more about objects.
+See the ï¿½objects and classesï¿½ module for more about objects.
 Let's say we want to change the element at index 2.
 Because tuples are immutable, we can't.
 Therefore, Ratings 1 will not be affected by a change in Rating because the tuple is
@@ -103,10 +103,10 @@ Index 3 contains the list we appended.
 Every time we apply a method, the lists changes.
 If we apply extend, we add two new elements to the list.
 The list L is modified by adding two new elements.
-If we append the string “A“, we further change the list adding the string “A”.
+If we append the string ï¿½Aï¿½, we further change the list adding the string ï¿½Aï¿½.
 As lists are mutable, we can change them.
 For example, we can change the first element as follows.
-The list now becomes: “hard rock”, 10, 1.2.
+The list now becomes: ï¿½hard rockï¿½, 10, 1.2.
 We can delete an element of a list using the "del" command; we simply indicate the list
 item we would like to remove as an argument.
 For example, if we would like to remove the first element, the result becomes 10,1.2.
@@ -124,17 +124,21 @@ by a comma.
 When we set one variable, B equal to A, both A and B are referencing the same list.
 Multiple names referring to the same object is known as aliasing.
 We know from the last slide that the first element in B is set as hard rock.
-If we change the first element in “A” to “banana” we get a side effect; the
+If we change the first element in ï¿½Aï¿½ to ï¿½bananaï¿½ we get a side effect; the
 value of B will change as a consequence.
-"A" and “B” are referencing the same list, therefore if we change "A“, list "B" also
+"A" and ï¿½Bï¿½ are referencing the same list, therefore if we change "Aï¿½, list "B" also
 changes.
-If we check the first element of B after changing list ”A” we get banana instead of hard
+If we check the first element of B after changing list ï¿½Aï¿½ we get banana instead of hard
 rock.
-You can clone list “A” by using the following syntax.
+You can clone list ï¿½Aï¿½ by using the following syntax.
 Variable "A" references one list.
-Variable “B” references a new copy or clone of the original list.
-Now if you change “A”, "B" will not change.
+Variable ï¿½Bï¿½ references a new copy or clone of the original list.
+Now if you change ï¿½Aï¿½, "B" will not change.
 We can get more info on lists, tuples and many other objects in Python using the help
 command.
 Simply pass in the list, tuple or any other Python object.
 See the labs for more things you can do with lists.*
+
+**Task 12: Conditionals and Lists**  
+Create a script that generates a list of random numbers (between 1 and 100) of a specified length. Then, use conditionals to categorize the numbers into "even" and "odd" groups. Print the resulting lists.  
+
